--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Casamento Lucas & Ilana - Gerenciamento",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dev Lucas P.",
@@ -15,8 +15,11 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.15",
+    "mysql2": "^2.3.3",
+    "mysql2-promise": "^0.1.4",
+    "nodemon": "^2.0.19",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "util-deprecate": "^1.0.2"
   }
 }
